--- a/splash/templates/home.html
+++ b/splash/templates/home.html
@@ -5,10 +5,10 @@
 	<script type="text/javascript" src="static/javascript/home.js"></script>
 	<link rel="stylesheet" type="text/css" href="static/css/home.css" />
 	<link rel="stylesheet" type="text/css" href="static/css/reset.css" />
-	<title>partio | Curate Parties To Your Liking</title>
+	<title>prtio | Curate Parties To Your Liking</title>
 </head>
 <body>
-
+	
 	
 </body>
 </html>
