--- a/splash/templates/home.html
+++ b/splash/templates/home.html
@@ -8,7 +8,13 @@
 	<title>prtio | Curate Parties To Your Liking</title>
 </head>
 <body>
-	
-	
+	<form action='/user/do/register' name='resetLayoutForm' method='POST'>
+		<input name="email" type="text" placeholder="Email" />
+		<input name="firstname" type="text" placeholder="First Name" />
+		<input name="lastname" type="text" placeholder="Last Name" />
+		<input name="password" type="password" placeholder="Password" />
+		<input type="submit" name="submit" value="Register" />
+	</form>
+		
 </body>
 </html>
