CSS and homepage

--- a/splash/templates/home.html
+++ b/splash/templates/home.html
@@ -5,16 +5,24 @@
 	<script type="text/javascript" src="static/javascript/home.js"></script>
 	<link rel="stylesheet" type="text/css" href="static/css/home.css" />
 	<link rel="stylesheet" type="text/css" href="static/css/reset.css" />
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,800' rel='stylesheet' type='text/css'>
+	<link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 	<title>prtio | Curate Parties To Your Liking</title>
 </head>
 <body>
-	<form action='/user/do/register' name='resetLayoutForm' method='POST'>
+	<div class="modal-box">
+		<span id="title-name">Prtio</span>
+		<span class="subtitle montserrat w300 35pix white">The best way to make a party playlist.</span>
+		<a href="/" class="homepage-button montserrat">Sign In</a>
+		<a href="/user/register" class="homepage-button montserrat">Create an Account</a>
+	</div>
+	<!-- <form action='/user/do/register' name='resetLayoutForm' method='POST'>
 		<input name="email" type="text" placeholder="Email" />
 		<input name="firstname" type="text" placeholder="First Name" />
 		<input name="lastname" type="text" placeholder="Last Name" />
 		<input name="password" type="password" placeholder="Password" />
 		<input type="submit" name="submit" value="Register" />
-	</form>
+	</form> -->
 		
 </body>
 </html>
