--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,112 @@
 html{
 	width: 100%;
 	height: 100%;
-	background: url(../images/paperTexture.png) repeat center center;
-    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale');
-    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale')";
+	background: url(../images/party.jpg) repeat center center;
+    /*filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale');*/
+    /*-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale')";*/
 }
+
+.modal-box {
+    position: absolute;
+    width: 500px;
+    height: 350px;
+    top: 50%;
+    left: 50%;
+    margin: -300px 0 0 -250px;
+    background-color:rgba(0, 0, 0, 0.85);
+    background: url(data:;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAABl0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuNUmK/OAAAAATSURBVBhXY2RgYNgHxGAAYuwDAA78AjwwRoQYAAAAAElFTkSuQmCC) repeat scroll transparent\9; /* ie fallback png background image */
+    z-index:9999;
+    text-align: center;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+}
+
+.subtitle{
+    display: block;
+    padding: 25px;
+    margin-bottom: 25px;
+}
+
+#title-name{
+    color: #3498DB;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 800;
+    font-size: 170px;
+}
+
+.montserrat{
+    font-family: 'Montserrat', sans-serif;
+}
+
+.w700{
+    font-weight: 700;
+}
+
+.w300{
+    font-weight: 300;
+}
+
+.65pix{
+    font-size: 65px;
+}
+
+.35pix{
+    font-size: 35px;
+}
+
+.white{
+    color: #fff;
+    /*text-shadow: 0 1px 1px;*/
+}
+
+.homepage-button{
+        margin-top:0;
+    cursor:pointer;
+    z-index: 2;
+    right: 0;
+    top:0;
+    border: none;
+    color: #ffffff;
+    padding: 13px 15px !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #168B47;
+  *background-color: #0044cc;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#55BA3F), to(#168B47));
+  background-image: -webkit-linear-gradient(top, #55BA3F, #168B47);
+  background-image: -o-linear-gradient(top, #55BA3F, #168B47);
+  background-image: linear-gradient(to bottom, #55BA3F, #168B47);
+  background-image: -moz-linear-gradient(top, #55BA3F, #168B47);
+  background-repeat: repeat-x;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+    font-size: 17px;
+   -webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+    /*float: left;*/
+    text-align: center;
+    max-height: 44px;
+    line-height: 18px;
+    width: 45%;
+    min-width: 50px;
+    text-decoration: none;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.homepage-button:hover {
+    color: #ffffff;
+    background-color: #168B47;
+  *background-color: #168B47;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#168B47), to(#168B47));
+  background-image: -webkit-linear-gradient(top, #168B47, #168B47);
+  background-image: -o-linear-gradient(top, #168B47, #168B47);
+  background-image: linear-gradient(to bottom, #168B47, #168B47);
+  background-image: -moz-linear-gradient(top, #168B47, #168B47);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#168B47', endColorstr='#168B47', GradientType=0);
+}
+
+
+
