Registration and login progress

--- a/splash/templates/home.html
+++ b/splash/templates/home.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <head>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	<script src="http://malsup.github.com/jquery.form.js"></script>
@@ -11,18 +11,10 @@
 </head>
 <body>
 	<div class="modal-box">
-		<span id="title-name">Prtio</span>
+		<span id="title-name">prtio</span>
 		<span class="subtitle montserrat w300 35pix white">The best way to make a party playlist.</span>
-		<a href="/" class="homepage-button montserrat">Sign In</a>
+		<a href="/user/login" class="homepage-button montserrat">Sign In</a>
 		<a href="/user/register" class="homepage-button montserrat">Create an Account</a>
 	</div>
-	<!-- <form action='/user/do/register' name='resetLayoutForm' method='POST'>
-		<input name="email" type="text" placeholder="Email" />
-		<input name="firstname" type="text" placeholder="First Name" />
-		<input name="lastname" type="text" placeholder="Last Name" />
-		<input name="password" type="password" placeholder="Password" />
-		<input type="submit" name="submit" value="Register" />
-	</form> -->
-		
 </body>
 </html>
