--- a/user/static/css/login.css
+++ b/user/static/css/login.css
@@ -1,3 +1,11 @@
+html{
+  width: 100%;
+  height: 100%;
+  background: url(../images/paperTexture.png) repeat center center;
+    /*filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale');*/
+    /*-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale')";*/
+}
+
 #change-login-register a{
   color: #08c;
 }
@@ -5,26 +13,35 @@
 #change-login-register {
   float: right;
   padding: 30px;
+  display: block;
 }
 
 #prtio-registration{
-  margin-top: 150px;
   padding: 50px;
 }
 
 #log-in-text{
   font-size: 40px;
   color: #08c;
+  margin-top: 30px;
 }
 
 .montserrat{
     font-family: 'Montserrat', sans-serif;
 }
 
-.login-logo{
+#main-login-section{
+  clear: right;
+  width: 650px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/*.login-logo{
   width: 50%;
   margin: 0 auto;
-}
+  display: block;
+}*/
 
 form {
   background: none;
@@ -36,7 +53,7 @@ form {
 input, #prtio-submit-log {
   display: block;
   font-size: 18px;
-  width:280px;
+  width:350px;
   margin: 10px auto;
   padding: 15px 12px 15px 12px;
   border-radius: 5px;
