--- a/splash/templates/home.html
+++ b/splash/templates/home.html
@@ -13,8 +13,10 @@
 	<div class="modal-box">
 		<span id="title-name">prtio</span>
 		<span class="subtitle montserrat w300 35pix white">The best way to make a party playlist.</span>
-		<a href="/user/login" class="homepage-button montserrat">Sign In</a>
-		<a href="/user/register" class="homepage-button montserrat">Create an Account</a>
+		<form action = '/user/login' name='resetLayoutForm' method='POST'>
+		    <input type="submit" value="Log In With Facebook" />
+		</form>
+		<!-- <button id="facebook-login" href="/user/login" class="homepage-button montserrat">Sign In</a> -->
 	</div>
 </body>
 </html>
