--- a/splash/templates/home.html
+++ b/splash/templates/home.html
@@ -17,9 +17,8 @@
 		</div>
 		<span class="subtitle white">The best way to make a party playlist.</span>
 		<form action = '/user/login' name='resetLayoutForm' method='POST'>
-		    <button id="signin-facebook-button" class="facebook">Sign up with Facebook</button>
+		    <button id="signin-facebook-button" class="facebook">Sign in with Facebook</button>
 		</form>
-		<!-- <button id="facebook-login" href="/user/login" class="homepage-button montserrat">Sign In</a> -->
 	</div>
 </body>
 </html>
