--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,7 @@
 html{
 	width: 100%;
 	height: 100%;
-	background: url(../images/PARTY_red.jpg) repeat center center;
+	background: url(../images/concert-crowd.jpg) repeat center center;
     /*filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale');*/
     /*-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/ls-Splash_vignette.png', sizingMethod='scale')";*/
 }
