--- a/party/static/css/party.css
+++ b/party/static/css/party.css
@@ -29,3 +29,68 @@ header {
 	margin-left: 25px;
 	margin-top: 0px;
 }
+
+h1{
+	text-align: center;
+}
+
+form {
+  background: none;
+  margin: 20px auto 0;
+  padding: 10px;
+  /*width: 280px;*/
+}
+
+input, #prtio-submit-log {
+  display: block;
+  font-size: 18px;
+  width:350px;
+  margin: 10px auto;
+  padding: 15px 12px 15px 12px;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0, .55), 0px 1px 1px rgba(255,255,255,.5);
+  border: 1px solid #666;
+}
+
+input, #prtio-submit-log {
+  opacity: 0.5;
+}
+
+input:hover,
+input:focus, #prtio-submit-log:hover, #prtio-submit-log:focus {
+  opacity: .7;
+  /*color:#08c;*/
+  border: 1px solid #08c;
+   box-shadow: 0px 1px 0px rgba(255,255,255,.25),inset 0px 3px 6px rgba(0,0,0,.25);
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+  box-shadow: inset 0 1px 2px rgba(255,255,255, .35), 0px 1px 15px rgba(0,246,255,.5);
+  border: 1px solid #08c;
+  outline: none;
+}
+
+.submit-button {
+  appearance: none;
+  opacity: .99;
+  width:120px;
+  background: #08c;
+  box-shadow: inset 0 1px 2px rgba(255,255,255, .35), 0px 1px 6px rgba(0,246,255,.5);
+  border: 1px solid #0a5378;
+  border-radius: 4px;
+  color: #eee;
+  cursor: pointer;
+  text-shadow:0px -1px 0px rgba(0,0,0,.5);
+}
+
+.submit-button:hover {
+  background: #08c;
+  width:120px;
+  border: 1px solid #0a5378;
+  border-radius: 3px;
+  box-shadow: inset 0px 3px 16px rgba(0,0,0,.25),0px 1px 10px rgba(255,255,255,.5),inset 0px -1px 2px rgba(255,255,255,.35);
+  text-shadow:0px 1px 1px rgba(0,0,0,.65);
+  -webkit-transition: all 0.40s ease-out;
+  transition: all 0.40s ease-out;
+}
