--- a/party/templates/listen.html
+++ b/party/templates/listen.html
@@ -29,7 +29,7 @@
             <h1>prtio</h1>
           </div>
 
-        <span id="current-room">Room: <span id="room-id">{{ room }}</span></span><br />
+        <span id="current-room">Please text (203) 903-0333 with code: "<span id="room-id">{{ room }}</span>" to join.</span><br />
         <div class="added-notification"><span>You're song has been added to the cue!</span></div>
         <div class="searchbar">
           <input id="search_input" type="text" class="rounded" value="">
