--- a/party/templates/listen.html
+++ b/party/templates/listen.html
@@ -29,7 +29,9 @@
             <h1>prtio</h1>
           </div>
 
-        <span id="current-room">Please text (203) 903-0333 with code: "<span id="room-id">{{ room }}</span>" to join.</span><br />
+        <span id="current-room">Text the party code "<span id="room-id">{{ room }}</span>" to (203) 903-0333 to start suggesting songs.</span><br />
+        <span id="current-room">Log in at rdio.com to enjoy full songs.</span><br />
+
         <div class="added-notification"><span>You're song has been added to the cue!</span></div>
         <div class="searchbar">
           <input id="search_input" type="text" class="rounded" value="">
