--- a/party/static/css/party.css
+++ b/party/static/css/party.css
@@ -15,6 +15,16 @@ header {
   height: 70px;
 }
 
+h2{
+	text-align:center;
+
+}
+
+h2 a{
+	color: black;
+	text-decoration: underline;
+}
+
 .account-name{
 	margin-left: 20px;
 	color: white;
